--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </select>
     </div>
 
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay" onclick="closeMobileNav()"></div>
+
     <!-- Header -->
     <header class="header">
         <div class="container">
@@ -31,6 +34,7 @@
                 <span></span>
             </div>
             <nav class="nav" id="mobileNav">
+                <button class="mobile-menu-close" onclick="closeMobileNav()"></button>
                 <ul>
                     <li><a href="#home" data-en="Home" data-fr="Accueil" data-ar="الرئيسية" onclick="closeMobileNav()">Home</a></li>
                     <li><a href="#about" data-en="About" data-fr="À propos" data-ar="حول" onclick="closeMobileNav()">About</a></li>
