ENHANCED MULTILINGUAL SUPPORT & SCHEDULE UPDATES
 Language System Improvements:
- Added persistent language preference storage in localStorage
- Language selection now works across all pages automatically
- Enhanced language loading on page initialization
- Fixed language selector accessibility with proper titles

 Schedule Updates:
- Added flexible schedule notes to all plan pages
- Updated combo package pricing to 1100 DH
- Added Udemy bonus access information
- Clarified that schedules can be customized

 Content Updates:
- Updated program dates to July 28th - August 6th
- Enhanced Bac Track with new features and structure
- Improved Skills Track with Python, C++, Robotics, AI Tools
- Updated FAQ to reflect schedule flexibility
- Added comprehensive translations for all new content

 User Experience:
- Language preference persists when navigating between pages
- Improved multilingual content coverage
- Better schedule transparency and flexibility
- Enhanced combo package value proposition

 Technical Improvements:
- Enhanced JavaScript language switching functionality
- Added loadLanguagePreference() function
- Improved translation coverage for all pages
- Better DOM content loading for language initialization

--- a/bac-track.html
+++ b/bac-track.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Language Selector -->
     <div class="language-selector">
-        <select id="languageSelect" onchange="changeLanguage()">
+        <select id="languageSelect" onchange="changeLanguage()" title="Select Language">
             <option value="en">English</option>
             <option value="fr">Français</option>
             <option value="ar">العربية</option>
@@ -104,6 +104,7 @@
 
                 <div class="plan-schedule">
                     <h2>📅 <span data-en="Your Weekly Schedule" data-fr="Votre horaire hebdomadaire" data-ar="جدولك الأسبوعي">Your Weekly Schedule</span></h2>
+                    <p class="schedule-note" data-en="*This schedule is flexible and can be adjusted based on student preferences and availability." data-fr="*Cet horaire est flexible et peut être ajusté selon les préférences et la disponibilité des étudiants." data-ar="*هذا الجدول مرن ويمكن تعديله حسب تفضيلات الطلاب وتوفرهم.">*This schedule is flexible and can be adjusted based on student preferences and availability.</p>
                     <div class="schedule-table">
                         <div class="schedule-row">
                             <div class="day">Monday</div>
@@ -151,30 +152,30 @@
                 <div class="plan-benefits">
                     <h2>🎯 <span data-en="Why Choose Bac Track?" data-fr="Pourquoi choisir le Parcours Bac?" data-ar="لماذا تختار مسار البكالوريا؟">Why Choose Bac Track?</span></h2>
                     <ul class="benefits-list">
-                        <li data-en="Expert teachers with proven track record in Bac preparation"
-                            data-fr="Professeurs experts avec un parcours éprouvé dans la préparation au Bac"
-                            data-ar="معلمون خبراء مع سجل حافل في إعداد البكالوريا">
-                            Expert teachers with proven track record in Bac preparation
+                        <li data-en="💼 University students and teachers who truly understand what you're going through and what you need"
+                            data-fr="💼 Étudiants universitaires et enseignants qui comprennent vraiment ce que vous vivez et ce dont vous avez besoin"
+                            data-ar="💼 طلاب جامعيون ومدرسون يفهمون حقاً ما تمر به وما تحتاجه">
+                            💼 University students and teachers who truly understand what you're going through and what you need
                         </li>
-                        <li data-en="Small group sessions for personalized attention"
-                            data-fr="Sessions en petits groupes pour une attention personnalisée"
-                            data-ar="جلسات مجموعات صغيرة للحصول على اهتمام شخصي">
-                            Small group sessions for personalized attention
+                        <li data-en="✅ Online sessions you can join even while on holiday, with all sessions recorded for you to watch anytime"
+                            data-fr="✅ Sessions en ligne auxquelles vous pouvez participer même en vacances, toutes les sessions étant enregistrées pour que vous puissiez les regarder à tout moment"
+                            data-ar="✅ جلسات عبر الإنترنت يمكنك الانضمام إليها حتى أثناء العطلة، مع تسجيل جميع الجلسات لتشاهدها في أي وقت">
+                            ✅ Online sessions you can join even while on holiday, with all sessions recorded for you to watch anytime
                         </li>
-                        <li data-en="Access to exclusive study materials and resources"
-                            data-fr="Accès à des matériels d'étude et ressources exclusives"
-                            data-ar="الوصول إلى مواد دراسية وموارد حصرية">
-                            Access to exclusive study materials and resources
+                        <li data-en="📚 Access to exclusive study materials and resources"
+                            data-fr="📚 Accès à des matériels d'étude et ressources exclusives"
+                            data-ar="📚 الوصول إلى مواد دراسية وموارد حصرية">
+                            📚 Access to exclusive study materials and resources
                         </li>
-                        <li data-en="Regular progress tracking and feedback"
-                            data-fr="Suivi régulier des progrès et retours"
-                            data-ar="تتبع منتظم للتقدم والتغذية الراجعة">
-                            Regular progress tracking and feedback
+                        <li data-en="🎯 Different levels tailored to your skills and learning pace"
+                            data-fr="🎯 Différents niveaux adaptés à vos compétences et votre rythme d'apprentissage"
+                            data-ar="🎯 مستويات مختلفة مصممة لمهاراتك ووتيرة تعلمك">
+                            🎯 Different levels tailored to your skills and learning pace
                         </li>
-                        <li data-en="Certificate of completion"
-                            data-fr="Certificat de completion"
-                            data-ar="شهادة إتمام">
-                            Certificate of completion
+                        <li data-en="🤝 Group sessions where you can connect and find your perfect study buddy"
+                            data-fr="🤝 Sessions de groupe où vous pouvez vous connecter et trouver votre parfait partenaire d'étude"
+                            data-ar="🤝 جلسات جماعية حيث يمكنك التواصل والعثور على شريك الدراسة المثالي">
+                            🤝 Group sessions where you can connect and find your perfect study buddy
                         </li>
                     </ul>
                 </div>
