--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Language Selector -->
     <div class="language-selector">
-        <select id="languageSelect" onchange="changeLanguage()">
+        <select id="languageSelect" onchange="changeLanguage()" title="Select Language">
             <option value="en">English</option>
             <option value="fr">Français</option>
             <option value="ar">العربية</option>
