💰 UPDATE COMBO PACKAGE: Price and features update to 1100 DH
✨ Pricing Update:
- Updated Combo Package price from 1000 DH to 1100 DH
- Updated both plan selection cards and dropdown options

🎁 New Features Added:
- Bonus Udemy courses access
- Customizable training plan
- Replaced generic mentoring/support with specific value-added features

🌐 Multilingual Support:
- Added translations for new features in English, French, and Arabic
- Updated registrationTranslations object with new content

📱 Registration Form Updates:
- Updated plan selection cards with new pricing and features
- Updated dropdown option to reflect correct pricing
- Enhanced value proposition for combo package

🎯 Value Enhancement:
- Better differentiation of combo package benefits
- More specific and valuable bonus features
- Clearer value proposition for premium pricing

--- a/register.html
+++ b/register.html
@@ -104,12 +104,12 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <h3 data-en="Combo Package" data-fr="Package Combo" data-ar="باقة مجمعة">Combo Package</h3>
-                        <div class="price">1000 DH</div>
+                        <div class="price">1100 DH</div>
                         <ul class="plan-features">
                             <li data-en="Everything from Bac Track" data-fr="Tout du parcours Bac" data-ar="كل شيء من مسار البكالوريا">Everything from Bac Track</li>
                             <li data-en="Everything from Skills Track" data-fr="Tout du parcours Compétences" data-ar="كل شيء من مسار المهارات">Everything from Skills Track</li>
-                            <li data-en="Bonus mentoring sessions" data-fr="Sessions de mentorat bonus" data-ar="جلسات إرشادية إضافية">Bonus mentoring sessions</li>
-                            <li data-en="Priority support" data-fr="Support prioritaire" data-ar="دعم أولوي">Priority support</li>
+                            <li data-en="Bonus Udemy courses access" data-fr="Accès bonus aux cours Udemy" data-ar="وصول إضافي لدورات Udemy">Bonus Udemy courses access</li>
+                            <li data-en="Customizable training plan" data-fr="Plan de formation personnalisable" data-ar="خطة تدريب قابلة للتخصيص">Customizable training plan</li>
                         </ul>
                         <div class="plan-check">
                             <i class="fas fa-check-circle"></i>
@@ -153,7 +153,7 @@
                             <option value="" data-en="Choose a plan..." data-fr="Choisissez un plan..." data-ar="اختر خطة...">Choose a plan...</option>
                             <option value="Bac Track" data-en="Bac Track - 500 DH" data-fr="Parcours Bac - 500 DH" data-ar="مسار البكالوريا - 500 درهم">Bac Track - 500 DH</option>
                             <option value="Skills Track" data-en="Skills Track - 600 DH" data-fr="Parcours Compétences - 600 DH" data-ar="مسار المهارات - 600 درهم">Skills Track - 600 DH</option>
-                            <option value="Combo Package" data-en="Combo Package - 1000 DH" data-fr="Package Combo - 1000 DH" data-ar="باقة مجمعة - 1000 درهم">Combo Package - 1000 DH</option>
+                            <option value="Combo Package" data-en="Combo Package - 1100 DH" data-fr="Package Combo - 1100 DH" data-ar="باقة مجمعة - 1100 درهم">Combo Package - 1100 DH</option>
                         </select>
                     </div>
                     
